Fix button alignment

--- a/app/admin/style.module.scss
+++ b/app/admin/style.module.scss
@@ -411,10 +411,6 @@
   div + form {
     margin-top: 12px;
   }
-
-  form + form {
-    margin-top: 10px;
-  }
 }
 
 .manageActions {
